
  - OpenXML filter: New option to translate slide masters in PowerPoint documents

  - French localisation updated to 2.0 (UI)

----------------------------------------------------------------------
 OmegaT 1.8.1 update 6 Changes
----------------------------------------------------------------------
1.8.1 update 6 vs. 1.8.1 update 5

   2 Enhancements
   0 Bugfix

----------------------------------------------------------------------
1.8.1 update 6

  Other enhancements:
  
  - The Linux package (with JRE) is now compressed with bz2 instead of gz
  - German localisation updated to 1.8 (UI, Instant Start, Readme, backported from 2.0.3)

----------------------------------------------------------------------
 OmegaT 1.8.1 update 5 Changes
----------------------------------------------------------------------
1.8.1 update 5 vs. 1.8.1 update 4

   2 Enhancements
   2 Bugfixes

----------------------------------------------------------------------
1.8.1 update 5

  Other enhancements:

  - Russian documentation updated to 1.8 (UI, Instant Start, readme, documentation)
  - Dutch localisation updated to 1.8 (Documentation)

  Bug fixes:

  - Linux startup script must be run from install dir
  http://sourceforge.net/support/tracker.php?aid=2654430

  - XLIFF filter: the content of <seg-source> was visible

----------------------------------------------------------------------
 OmegaT 1.8.1 update 4 Changes
----------------------------------------------------------------------
1.8.1 update 4 vs. 1.8.1 update 3

   0 Enhancement
   4 Bugfixes
----------------------------------------------------------------------
1.8.1 update 4

  Bug fixes:

  - XML, stylesheet declaration removed from target
  http://sourceforge.net/support/tracker.php?aid=1677412
  
  - XML, Processing Instructions removed from target document
  http://sourceforge.net/support/tracker.php?aid=1662202  

  - Hunspell and OmegaT could crash if a dictionary did not exist for
a project's language
